fix vh issue on iphone // don't show video on smaller screens // improve big-txt size //

--- a/sass/base/global.scss
+++ b/sass/base/global.scss
@@ -54,7 +54,6 @@ img {
 section {
     position: relative;
     padding: 7vw 10% 16vw 10%;
-    min-height: 50vh;    
     color: $white;
     background-image: url(../img/background/shape-1.svg);
     background-size: 85%;
