--- a/sass/components/typography.scss
+++ b/sass/components/typography.scss
@@ -60,7 +60,7 @@ p {
 } 
 
 .big-txt {
-    font-size: 1.4em; 
+    font-size: 1.25em; 
 }
 
 .columns {
